[gd_scene load_steps=4 format=3 uid="uid://37auurnldi7g"]

[ext_resource type="Script" uid="uid://tbt75lgjlpf" path="res://scenes/minigameScenes/towerCrash/tower_main_menu.gd" id="1_4rwf4"]
[ext_resource type="Texture2D" uid="uid://c34ukuwxsrjoi" path="res://assets/MenuScreens/TowerCrashMenu.png" id="2_0xswr"]
[ext_resource type="PackedScene" uid="uid://hmnwjbqslhkw" path="res://scenes/button.tscn" id="2_x125k"]

[node name="towerMainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4rwf4")

[node name="TowerCrashMenu" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(751, 530)
scale = Vector2(1.117, 1.117)
texture = ExtResource("2_0xswr")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 234.0
offset_top = 3.0
offset_right = 1546.0
offset_bottom = 861.0
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 72
text = "Destroy All Enemies!

WASD Spin Space
Move	  Spin	  Jump"
horizontal_alignment = 1

[node name="startButton" parent="." instance=ExtResource("2_x125k")]
layout_mode = 0
offset_left = 575.0
offset_top = 718.0
offset_right = 1217.0
offset_bottom = 931.0
theme_override_font_sizes/font_size = 100
nextScene = "res://scenes/minigameScenes/towerCrash/w1c1.tscn"

[node name="winMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 378.0
offset_top = 456.0
offset_right = 730.0
offset_bottom = 560.0

[node name="prizeButton" type="Button" parent="winMenu"]
layout_mode = 0
offset_right = 348.0
offset_bottom = 136.0
text = "PRIZE"

[connection signal="pressed" from="startButton" to="startButton" method="_on_pressed"]
[connection signal="pressed" from="winMenu/prizeButton" to="." method="_on_prize_button_pressed"]
